fixed white gap in home footer;

--- a/src/app/pages/LandingPage/components/SovrynsUnite/index.module.scss
+++ b/src/app/pages/LandingPage/components/SovrynsUnite/index.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  @apply tw-overflow-hidden tw--mb-4;
+  @apply tw--mb-4;
   margin-top: 8.125rem;
 }
 
